--- a/assets/index.css
+++ b/assets/index.css
@@ -2,11 +2,59 @@ body {
 	text-align: center;
 	background-color: black;
 	color: white;
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+header {
+	font-family: 'Marck Script', cursive;
+	background-color: red;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+#eaten {
+	font-family: 'Marck Script', cursive;
+	font-size: 24px;
+	text-align: left;
+}
+
+#mark-all {
+	text-align: right;
+}
+
+#list-header {
+	background-color: red;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+h1 {
+	padding: 10px;
 }
 
 input,
 button {
 	color: black;
+}
+
+#foods {
+	color: black;
+	text-align: left;
+}
+
+footer {
+	font-size: 20px;
+}
+
+.glyphicon {
+	position: absolute;
+	right: 0px;
+	padding: 5px;
 }
 
 .list-group-item:hover {
@@ -15,4 +63,33 @@ button {
 
 #searchresults {
 	color: black;
+}
+
+#delete-checked {
+	font-weight: bold;
+	float: right;
+}
+
+#caloriecount {
+	font-family: 'Marck Script', cursive;
+	font-size: 30px;
+}
+
+@media screen and (max-width: 991px) {
+	body {
+		max-width: 80%;
+	}
+
+	#caloriecount {
+		padding: 0;
+		margin: 0;
+		text-align: center;
+		font-size: 20px;
+	}
+
+	.toggle,
+	#mark-all,
+	#delete-checked {
+		display: none;
+	}
 }
