--- a/assets/index.css
+++ b/assets/index.css
@@ -71,8 +71,7 @@ footer {
 }
 
 #caloriecount {
-	font-family: 'Marck Script', cursive;
-	font-size: 30px;
+	font: 30px 'Marck Script', cursive;
 }
 
 @media screen and (max-width: 991px) {
